--- a/Sockets/WebServer/www/root.html
+++ b/Sockets/WebServer/www/root.html
@@ -9,6 +9,7 @@
 			<li>/json -- returns a json of the /random request</a></li>
 			<li>/random -- returns index.html</a></li>
 			<li>/inspiration -- returns predetermined inspirational quotes, use inspiration?num1=1&num2=2 for working results</a></li>
+			<li>/concatenate -- returns the concatenated string from two inputs</a></li>
 		</ul>
 		<h3>File Structure in www (you can use /file/www/FILENAME):</h3>
 		${links}
